--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body{
 .container{
    display: flex;
    flex-direction: column;
+   flex-shrink: 1;
+   width: 50%;
    height: 500px;
    justify-content: center;
    align-items: center;
